FIX: Fix issue where PDF viewers were not showing PDF

--- a/src/less/modules/panel-fullscreen.less
+++ b/src/less/modules/panel-fullscreen.less
@@ -59,7 +59,3 @@
     }
   }
 }
-
-*:not(.fullscreen) .panel-body {
-  height: auto !important; // Needs to be important to override resize
-}
